// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component.UI.StatusIndicator closing should render correctly 1`] = `
<Styled(styled.div)
  variant="closing"
>
  <SvgCircle
    height="0.7em"
    width="0.7em"
  />
</Styled(styled.div)>
`;

exports[`component.UI.StatusIndicator offline should render correctly 1`] = `
<Styled(styled.div)
  variant="offline"
>
  <SvgCircle
    height="0.7em"
    width="0.7em"
  />
</Styled(styled.div)>
`;

exports[`component.UI.StatusIndicator online should render correctly 1`] = `
<Styled(styled.div)
  variant="online"
>
  <SvgCircle
    height="0.7em"
    width="0.7em"
  />
</Styled(styled.div)>
`;

exports[`component.UI.StatusIndicator pending should render correctly 1`] = `
<Styled(styled.div)
  variant="pending"
>
  <SvgCircle
    height="0.7em"
    width="0.7em"
  />
</Styled(styled.div)>
`;
